src/objects/Notification__c.object
<CustomObject>
    <fields>
        <fullName>EmployerId__c</fullName>
        <label>Employer</label>
        <referenceTo>Employer__c</referenceTo>
        <relationshipLabel>Notifications</relationshipLabel>
        <relationshipName>Notifications</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FreelancerId__c</fullName>
        <label>Freelancer</label>
        <referenceTo>Freelancer__c</referenceTo>
        <relationshipLabel>Notifications</relationshipLabel>
        <relationshipName>Notifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>130768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Notification</label>
    <nameField>
        <label>Notification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>